# 32word

./: .env.example  .gitignore  DOCS_REPORT.md  DOCUMENTATION.md  MANIFEST.in  PHASE4_EXPORT_COMPLETE.md  PHASE_D_COMPLETION_SUMMARY.md  PHASE_G_COMPLETION_SUMMARY.md  README.md  REFACTORING_CHECKLIST.md  RELEASE_NOTES_0.1.3.md  RELEASE_NOTES_0.2.0.md  publish.sh  pyproject.toml
docs/: AUDIT_TODO.md  DATA_COMPLETENESS_CHECKLIST.md  INTEGRATION_CLI.md  INTEGRATION_DISCORD_BOT.md  INTEGRATION_WEB_APP.md  RESPONSE_SCHEMA_REFERENCE.md
outputs/phases/: phase_b_completion_report.md  phase_b_review.md
scripts/: generate_depth_strategies.py  verify_data_health.py
tests/: test_integration_scenarios.py  test_strategy.py
word32/: __init__.py  data_manager.py  response_schema.py  strategy.py
word32/data/: v1.0.json
