[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "32word"
version = "0.2.0"
description = "The game engine for 3-2-Word: Solve Wordle in three guesses. Includes standardized response schema (Phase 4.2), custom first guess selection from 32 optimal options (Phase 4.3), remaining words tracking, and comprehensive strategy lookup."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
word32 = ["data/*.txt", "data/*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["word32*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
